Fixed Services for Student Endpoints
