# app/controllers/students_controller.rb
@@ -1,5 +1,4 @@
 class StudentsController < UsersController
-    
     before_action :set_topic, only: [ :request_topic ]
 
     def request_topic
@@ -15,17 +14,17 @@ class StudentsController < UsersController
         service = StudentsService.new(@current_user)
         result = service.get_my_requested_topics()
 
-        if result[:error]
+        if result.is_a?(Hash)
             render json: result, status: :not_found
         else
             render json: result, status: :ok
         end
     end
 
-    def all_requested_topics
+    def requested_topics
         result = StudentsService.get_requested_topics
 
-        if result[:error]
+        if result.is_a?(Hash)
             render json: result, status: :not_found
         else
             render json: result, status: :ok
@@ -33,19 +32,23 @@ class StudentsController < UsersController
     end
 
     private
-
-        
-       
-
         # Set the topic within the context of the subject
         def set_topic
             @topic = Topic.find(params[:topic_id])
         rescue ActiveRecord::RecordNotFound
-            render json: { error: "Topic not found" }, status: :not_found
+            @topic = Topic.new(topic_params)
+            unless @topic.save
+                render json: { errors: @topic.errors.full_messages }, status: :unprocessable_entity
+            nil
+            end
         end
 
         # Permit only allowed parameters
         def solicitar_params
             params.require(:solicitar).permit(:topic_id)
+        end
+
+        def topic_params
+            params.require(:topic).permit(:name, :asset, :subject_id)
         end
 end
